// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`d component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Checkbox Label
    <input
      type="radio"
      value=""
    />
  </label>
</div>
`;

exports[`d component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      checked=""
      type="radio"
      value=""
    />
  </label>
</div>
`;

exports[`d component handling input should update a value when changed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      type="radio"
      value=""
    />
  </label>
</div>
`;
